Fixed invisible border for username in input field in Profile. Added links to Login page.

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -10,3 +10,9 @@
 .container {
     padding-top: 58px;
 }
+
+.vcc-profile-container-border {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: gray;
+}
